[app] fix contrast ratio in some copies

--- a/src/index.css
+++ b/src/index.css
@@ -110,7 +110,7 @@ html {
 }
 body {
   line-height: 1;
-  background-color: #f7f7f7;
+  background-color: #f0f0f0;
   font-family: 'Nunito', sans-serif;
   display: flex;
   flex-direction: column;
